--- a/My_Spot.html
+++ b/My_Spot.html
@@ -7,7 +7,7 @@
   		<meta name="keywords" content="Isaac, Paschall, Software Engineer, ios developer, swift, swiftui, uikit, my spot, my spot exploration, app, watch app, appclip, find spots, spots near me, save spots">
   		<meta name="author" content="Isaac Paschall">
 		<meta name="apple-itunes-app" content="app-id=1613618373">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no viewport-fit=cover" />
 		<link rel="shortcut icon" type="image/x-icon" href="images/myspotIcon.ico" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
