--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="Portfolio website to showcase skills, projects, and work experience of Isaac Paschall, a Computer Science major software engineer ios developer">
   		<meta name="keywords" content="Portfolio, Isaac, Paschall, Software Engineer, ios developer, swift, swiftui, uikit, my spot, my spot exploration">
   		<meta name="author" content="Isaac Paschall">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no viewport-fit=cover" />
 		<link rel="shortcut icon" type="image/x-icon" href="images/scripticon.ico" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
