--- a/My_Spot.html
+++ b/My_Spot.html
@@ -189,6 +189,15 @@
 									</div>
 									<iframe width="280" height="480" style="padding:20px;" src="https://youtube.com/embed/QCpKpwtHZUA"></iframe>
 								</div>
+								<div class="spotlight">
+									<div class="content">
+										<header>
+											<h2>Hide Spots</h2>
+										</header>
+										<p>In order to hide a spot, two conditions need to be met. First, the spot must be private, and second, your device must have either Face ID, Touch ID, or any other password enabled (devices with no password to unlock will not be able to use this feature). After meeting these conditions, head over to the spot you would like to hide and tap on it for a detailed view. Scroll to the bottom and tap hide, if your device uses Face ID or Touch ID, you will be asked for permission then required to scan your face/finger. If your device has neither but uses a normal password, you will be asked to enter the password. Once successful, your spot is now hidden and every time it is accessed you will be required to use your authentication (Face ID, Touch ID, or password).</p>
+									</div>
+									<iframe width="280" height="480" style="padding:20px;" src="https://youtube.com/embed/93jt32PSft8"></iframe>
+								</div>
 							</section>
 						<!-- Technologies Used -->
 							<section id="second" class="main">
