--- a/My_Spot.html
+++ b/My_Spot.html
@@ -198,6 +198,15 @@
 									</div>
 									<iframe width="280" height="480" style="padding:20px;" src="https://youtube.com/embed/93jt32PSft8"></iframe>
 								</div>
+								<div class="spotlight">
+									<div class="content">
+										<header>
+											<h2>Save Spot to NFC Tag</h2>
+										</header>
+										<p>In order to save spots to an NFC tag, find any spot that is public (any spot from discover or profile tab) and tap on the spot to get more details. Then simple scroll to the bottom and tap the button "Save to NFC tag". Hold the tag up to your device (the tag must allow for writes and cannot be read only) and My Spot will quickly save the link to the NFC tag, Now hold the tag up to any device with the My Spot app downloaded, and tap the NFC notification that appears. The My Spot app will launch and open up the spot you saved! Note: if the saved spot is deleted from the cloud or set to private, the link will no longer work.</p>
+									</div>
+									<iframe width="280" height="480" style="padding:20px;" src="https://youtube.com/embed/ohtmfTm3d_w"></iframe>
+								</div>
 							</section>
 						<!-- Technologies Used -->
 							<section id="second" class="main">
