--- a/My_Spot.html
+++ b/My_Spot.html
@@ -113,9 +113,9 @@
 										<header>
 											<h2>Shared Playlists</h2>
 										</header>
-										<p>In the playlist tab, you can create a playlist by tapping the plus in the top right corner and giving the playlist a name and an emoji. Then add any spots you have saved locally to the playlist. If you would like to share this playlist, you can add multiple friends to your playlist by tapping the person icon in the top left corner. This works similar to shared notes or shared photo albums. When one person in the shared playlists adds a spot or changes the name, it will update for all users. The owner can set permissions for each participent or stop sharing entiely at any time. If notifications are enabled for shared playlists, you will be updated once any changes occur. The spots in a playlist tab behave similar to spots in the My Spot tab, tap the map button to see all playlist spots in the map, search for spots in the playlist, or sort them.</p>
+										<p>In the playlist tab, you can create a playlist by tapping the plus in the top right corner and giving the playlist a name and an emoji. Then add any spots you have saved locally to the playlist. If you would like to share this playlist, you can add multiple friends to your playlist by tapping the person icon in the top right corner. This works similar to shared notes or shared photo albums. When one person in the shared playlists adds a spot or changes the name, it will update for all users. The owner can set permissions for each participent or stop sharing entiely at any time. If notifications are enabled for shared playlists, you will be updated once any changes occur. The spots in a playlist tab behave similar to spots in the My Spot tab, tap the map button to see all playlist spots in the map, search for spots in the playlist, or sort them. Watch the demo video for more info!</p>
 									</div>
-									<iframe width="280" height="480" style="padding:20px;" src="https://youtube.com/embed/XMLWPpzuy9I"></iframe>
+									<iframe width="480" height="280" style="padding:20px;" src="https://youtube.com/embed/uf_5iwvVPiQ"></iframe>
 								</div>
 								<div class="spotlight">
 									<div class="content">
