--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 											is a social media app centered around locations. It uses many Apple frameworks and runs mainly in 
 											the SwiftUI lifesycle but also utilizes many UIKit features. Some frameworks used include: Cloudkit, CoreData, CoreML, and Combine. 
 											For more information please visit the 
-											<a href="My_Spot.html" target="_blank">My Spot Offical Website</a> which goes in depth on technologies 
+											<a href="https://isaacpasc.github.io/My_Spot" target="_blank">My Spot Offical Website</a> which goes in depth on technologies 
 											used and all of its features or find it on the 
 											<a href="https://apps.apple.com/us/app/my-spot-exploration/id1613618373" target="_blank">AppStore</a>.</p>
 									</div>
