--- a/links.html
+++ b/links.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Isaac Paschall</title>
+		<title>My Spot Link</title>
 		<meta charset="utf-8" />
 		<meta http-equiv="refresh" content="0; URL=https://apps.apple.com/us/app/my-spot-exploration/id1613618373">
   		<meta name="author" content="Isaac Paschall">
 		<meta name="apple-itunes-app" content="app-id=1613618373">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
-		<link rel="shortcut icon" type="image/x-icon" href="images/scripticon.ico" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="shortcut icon" type="image/x-icon" href="images/myspotIcon.ico" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-		<p>Error</p>
+		<p>Redirect to AppStore</p>
 	</body>
 </html>
