--- a/clip.html
+++ b/clip.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="refresh" content="0; URL=https://apps.apple.com/us/app/my-spot-exploration/id1613618373">
   		<meta name="author" content="Isaac Paschall">
-		<meta name="apple-itunes-app" content="app-id=1613618373">
+		<meta name="apple-itunes-app" content="app-id=1613618373, app-clip-bundle-id=com.isaacpaschall.My-Spot.Clip, app-clip-display=card">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
 		<link rel="shortcut icon" type="image/x-icon" href="images/myspotIcon.ico" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
