--- a/clip.html
+++ b/clip.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>My Spot</title>
 		<meta charset="utf-8" />
-		<meta http-equiv="refresh" content="0; URL=https://apps.apple.com/us/app/my-spot-exploration/id1613618373">
   		<meta name="author" content="Isaac Paschall">
 		<meta name="apple-itunes-app" content="app-id=1613618373, app-clip-bundle-id=com.isaacpaschall.My-Spot.Clip, app-clip-display=card">
 		<meta property=”og:image” content=”images/MySpotAppClip.jpg”>
@@ -12,6 +11,6 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body>
-		<p>Redirecting to Appstore... <br/> <a href="https://isaacpasc.github.io/My_Spot">Go to My Spot Official Website</a> </p>
+		<p>Appclip Invoke <br/> <a href="https://isaacpasc.github.io/My_Spot">Go to My Spot Official Website</a> </p>
 	</body>
 </html>
