--- a/links.html
+++ b/links.html
@@ -11,11 +11,12 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body onload="redirect();">
-		<p>Redirecting to Appstore... <br/> <a href="https://isaacpasc.github.io/My_Spot">Go to My Spot Official Website</a> </p>
+		<p>Redirecting to Appstore... 3<br/> <a href="https://isaacpasc.github.io/My_Spot">Go to My Spot Official Website</a> </p>
 
 		<script>
 			function redirect() {
     			document.write(getIOSVersion());
+				document.write("hello");
 			}
 			function getIOSVersion() {
   			  const ua = navigator.platform;
