--- a/links.html
+++ b/links.html
@@ -18,8 +18,8 @@
 					let currURL = document.location;
 					let queryIndex = currentUrl.indexOf('?');
 					let query = currentURL.slice(queryIndex);
-					var newURL = new URL("https://isaacpasc.github.io/clip" + query);
-					window.location.replace(newURL)
+					let newURL = ("https://isaacpasc.github.io/clip" + query);
+					window.location.replace(newURL);
 				} else {
 					window.location = "https://apps.apple.com/us/app/my-spot-exploration/id1613618373";
 				}
