--- a/links.html
+++ b/links.html
@@ -20,6 +20,9 @@
 					let query = currentURL.slice(queryIndex);
 					let newURL = ("https://isaacpasc.github.io/clip" + query);
 					//window.location.replace(newURL);
+					document.write(currURL);
+					document.write(queryIndex);
+					document.write(query);
 					document.write(newURL);
 				} else {
 					//window.location = "https://apps.apple.com/us/app/my-spot-exploration/id1613618373";
