--- a/links.html
+++ b/links.html
@@ -16,14 +16,10 @@
 			function redirect() {
 				if (isAppclipCompatible()) {
 					let currURL = document.location.href;
-					document.write(currURL);
 					let queryIndex = currURL.indexOf('?');
-					document.write(queryIndex);
 					let query = currURL.slice(queryIndex);
-					document.write(query);
 					let newURL = ("https://isaacpasc.github.io/clip" + query);
-					//window.location.replace(newURL);
-					document.write(newURL);
+					window.location.replace(newURL);
 				} else {
 					//window.location = "https://apps.apple.com/us/app/my-spot-exploration/id1613618373";
 				}
