added advanced sharing

--- a/My_Spot.html
+++ b/My_Spot.html
@@ -201,11 +201,11 @@
 								<div class="spotlight">
 									<div class="content">
 										<header>
-											<h2>Save Spot to NFC Tag</h2>
+											<h2>Advanced Sharing</h2>
 										</header>
-										<p>In order to save spots to an NFC tag, find any spot that is public (any spot from discover or profile tab) and tap on the spot to get more details. Then simple scroll to the bottom and tap the button "Save to NFC tag". Hold the tag up to your device (the tag must allow for writes and cannot be read only) and My Spot will quickly save the link to the NFC tag, Now hold the tag up to any device with the My Spot app downloaded, and tap the NFC notification that appears. The My Spot app will launch and open up the spot you saved! Note: if the saved spot is deleted from the cloud or set to private, the link will no longer work.</p>
+										<p>My Spot offers many ways to share Accounts and Spots. Account can be shared by tapping the share button in an account view and sending a link, or by tapping the profile image to reveal a scannable QR code. Spots can be shared by tapping the share button to send a link, tapping generate QR code to generate a QR code, or by tapping save to nfc to save the url to an nfc tag. The advanced part comes when someone uses the shared link/qr code/nfc tag. If the person who uses the link for any spot/account has the My Spot app, it will simply launch the app and show them the spot/account you sent. But, if they don't have the app and they are running ios 16 or greater, they will be presented with an AppClip card. Once they open the AppClip, they will be shown the account/spot that you have shared. This is huge! <b>Now people who just want to view the spot/account and do not want to download the full app can simply open the spot/account in the AppClip with one tap!</b> Anyone who opens the spot/account link and does not have My Spot installed and is not running ios 16 or greater, will be sent to the Appstore to download the full app. Please watch the demo video for more details.</p>
 									</div>
-									<iframe width="280" height="480" style="padding:20px;" src="https://youtube.com/embed/ohtmfTm3d_w"></iframe>
+									<iframe width="280" height="480" style="padding:20px;" src="https://youtube.com/embed/tN5SZsU4f_c"></iframe>
 								</div>
 							</section>
 						<!-- Technologies Used -->
