--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 										<p>My Spot is my most ambitious project yet! It's an iOS, watchOS, and iPadOS app with widgets, 
 											notifications (with service/content extensions), iMessage app, AppClip, and much more. My Spot 
 											is a social media app centered around locations. It uses many Apple frameworks and runs mainly in 
-											the SwiftUI lifesycle but also utilizes many UIKit features. Some frameworks used include: Cloudkit, CoreData, CoreML, and Combine. 
+											the SwiftUI lifecycle but also utilizes many UIKit features. Some frameworks used include: Cloudkit, CoreData, CoreML, and Combine. 
 											For more information please visit the 
 											<a href="https://isaacpasc.github.io/My_Spot" target="_blank">My Spot Offical Website</a> which goes in depth on technologies 
 											used and all of its features or find it on the 
