--- a/clip.html
+++ b/clip.html
@@ -5,7 +5,8 @@
 		<meta charset="utf-8" />
   		<meta name="author" content="Isaac Paschall">
 		<meta name="apple-itunes-app" content="app-id=1613618373, app-clip-bundle-id=com.isaacpaschall.My-Spot.Clip, app-clip-display=card">
-		<meta property=”og:image” content=”images/MySpotAppClip.jpg”>
+		<meta property="og:title" content="My Spot" />
+		<meta property="og:image" content="https://isaacpasc.github.io/images/MySpotAppClip.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover" />
 		<link rel="shortcut icon" type="image/x-icon" href="images/myspotIcon.ico" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
