--- a/features.html
+++ b/features.html
@@ -62,6 +62,24 @@
 					<li><a href="privacy.html">Privacy</a></li>
 				</ul>
 			</nav>
+			<div class="horizontalscrollnav">
+				<a href="#createspots">Create Spots</a>
+				<a href="#viewspots">View Spots in Detail</a>
+				<a href="#discoverspots">Discover Spots</a>
+				<a href="#account">Personalize Account</a>
+				<a href="#notifications">Notifications</a>
+				<a href="#sharedplaylist">Shared Playlists</a>
+				<a href="#imessage">iMessage App</a>
+				<a href="#widgets">Widgets</a>
+				<a href="#appclip">AppClip</a>
+				<a href="#watch">Watch App</a>
+				<a href="#vote">Vote for Spots</a>
+				<a href="#shortcuts">Shortcuts</a>
+				<a href="#colors">Personalize Colors</a>
+				<a href="#ml">Machine Learning</a>
+				<a href="#hidespots">Hide Spots</a>
+				<a href="#sharing">Advanced Sharing</a>
+			</div>
 			
 			<!--Create Spots-->
 			<div class="point" id="createspots">
