--- a/technology.html
+++ b/technology.html
@@ -58,12 +58,32 @@
 		<div class="content">
 			<nav class="topnav">
 				<ul>
-					<li><a href="My_Spot.html">About</a></li>
-					<li><a href="features.html">Features</a></li>
-					<li><a href="technology.html" class="selected">Technology</a></li>
-					<li><a href="privacy.html">Privacy</a></li>
+					<li><a href="My_Spot">About</a></li>
+					<li><a href="features">Features</a></li>
+					<li><a href="technology" class="selected">Technology</a></li>
+					<li><a href="privacy">Privacy</a></li>
 				</ul>
 			</nav>
+			<div class="horizontalscrollnav">
+				<a href="#swiftui">SwiftUI</a>
+				<a href="#uikit">UIKit</a>
+				<a href="#cloudkit">CloudKit</a>
+				<a href="#coredata">CoreData</a>
+				<a href="#coreml">CoreML</a>
+				<a href="#notifications">Notifications</a>
+				<a href="#localization">Localization</a>
+				<a href="#combine">Combine</a>
+				<a href="#groupactivities">Group Activities</a>
+				<a href="#eventkit">EventKit</a>
+				<a href="#watchkit">WatchKit</a>
+				<a href="#mapkit">MapKit</a>
+				<a href="#widgetkit">WidgetKit</a>
+				<a href="#messages">Messages</a>
+				<a href="#mantis">Mantis</a>
+				<a href="#weatherkit">WeatherKit</a>
+				<a href="#storekit">StoreKit</a>
+				<a href="#coretransferable">Core Transferable</a>
+			</div>
 
 			<!--SwiftUI-->
 			<div class="point" id="swiftui">
