--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
 			</nav>
 			<div class="horizontalscrollnav">
 				<a href="#myspot">My Spot</a>
-				<a href="#news"></a>News App</a>
+				<a href="#news">News App</a>
 				<a href="#querydata">Data Query</a>
 				<a href="#compression">Compression Algorithm</a>
 			</div>
